<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Copied</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="clipdata_user_visible_label">Text copied using Copied</string>
    <string name="clipdata_not_listening_for_changes">Please tap on this text to start&#8230;</string>
    <string name="text_copied">Copied text: %s</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="added_to_clipboard">Text added to clipboard.</string>
    <string name="previous_text">Previous text</string>
    <string name="next_text">Next text</string>

    <string-array name="sliding_menu_options">
        <item>Texts to copy</item>
        <item>Settings</item>
        <!-- <item>Tutorial - TBD</item> -->
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- settings -->
    <string name="settings_ui">Customize UI</string>
    <string name="settings_display_toast">Display toast message after text is copied</string>
    <string name="settings_display_notificaion">Display notification icon in status bar</string>
    <string name="settings_lifecycle">Customize app lifecycle</string>
    <string name="settings_service_close_with_app">Closing the app, will close the background service &amp; dismiss notifications</string>
    <string name="settings_service_start_at_boot">Background service will automatically start when system starts</string>
    <string name="settings_notification">Customize notifications</string>
    <string name="settings_notification_no_clear">Do not clear the notification from notification view</string>
    <string name="settings_notification_big_view">Use Big view (like gmail) for notifications</string>

    <!-- copied texts -->
    <string name="empty_list">Copy some texts OR use the button bellow and this list will be populated.\nAfter that you can swipe to remove items or click and use them as if they were in the notification.</string>
    <string name="add_new_text">Add new text&#8230;</string>
    <string name="add_new_text_title">Text to be added</string>
    <string name="text_already_exists">The text you tried to add, already exists.</string>
    <string name="text_empty">The text you tried to add, is empty.</string>
    <string name="edit_text_title">Edit selected text</string>
    
    <string name="action_cut_performed">com.andreibacalu.android.copied.CutPerformed</string>
    
    <!-- API keys -->
    <string name="bugsense_api_key">2855c64c</string>
</resources>